// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRecordFilterOperands ACTOR returns ACTOR (text-like) operands when subFieldName is undefined 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands ACTOR returns IS/IS_NOT operands when subFieldName is source (actor source subField) 1`] = `
[
  "IS",
  "IS_NOT",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands ACTOR returns IS/IS_NOT operands when subFieldName is workspaceMemberId (actor wsMember subField) 1`] = `
[
  "IS",
  "IS_NOT",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands CURRENCY returns amountMicros operands when subFieldName is amountMicros 1`] = `
[
  "GREATER_THAN_OR_EQUAL",
  "LESS_THAN_OR_EQUAL",
  "IS",
  "IS_NOT",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands CURRENCY returns amountMicros operands when subFieldName is undefined 1`] = `
[
  "GREATER_THAN_OR_EQUAL",
  "LESS_THAN_OR_EQUAL",
  "IS",
  "IS_NOT",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands CURRENCY returns currencyCode operands when subFieldName is currencyCode 1`] = `
[
  "IS",
  "IS_NOT",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=ADDRESS 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=ARRAY 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=BOOLEAN 1`] = `
[
  "IS",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=DATE 1`] = `
[
  "IS",
  "IS_RELATIVE",
  "IS_IN_PAST",
  "IS_IN_FUTURE",
  "IS_TODAY",
  "IS_BEFORE",
  "IS_AFTER",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=DATE_TIME 1`] = `
[
  "IS",
  "IS_RELATIVE",
  "IS_IN_PAST",
  "IS_IN_FUTURE",
  "IS_TODAY",
  "IS_BEFORE",
  "IS_AFTER",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=EMAILS 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=FILES 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=FULL_NAME 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=LINKS 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=MULTI_SELECT 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=NUMBER 1`] = `
[
  "IS",
  "IS_NOT",
  "GREATER_THAN_OR_EQUAL",
  "LESS_THAN_OR_EQUAL",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=PHONES 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=RATING 1`] = `
[
  "IS",
  "IS_NOT",
  "GREATER_THAN_OR_EQUAL",
  "LESS_THAN_OR_EQUAL",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=RAW_JSON 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=RELATION 1`] = `
[
  "IS",
  "IS_NOT",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=SELECT 1`] = `
[
  "IS",
  "IS_NOT",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=TEXT 1`] = `
[
  "CONTAINS",
  "DOES_NOT_CONTAIN",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=TS_VECTOR 1`] = `
[
  "VECTOR_SEARCH",
]
`;

exports[`getRecordFilterOperands returns the expected operands for filterType=UUID 1`] = `
[
  "IS",
  "IS_NOT",
  "IS_EMPTY",
  "IS_NOT_EMPTY",
]
`;
